# ArchiveProject

./: .gitignore  CMakeLists.txt  README.md  test.arc
output/test_files/: b.txt
src/: main.cpp
src/Archive/: Archive.cpp  Archive.h
src/Huffman/: Huffman.cpp  Huffman.h
src/Models/: FileEntry.h
testfiles/: kb2.txt
testfiles/folder/: c.txt
